--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -751,9 +751,14 @@ body {
          display: flex;
          align-items: center;
          justify-content: flex-end;
+         cursor: pointer;
 
          @media (max-width: 760px) {
             flex: 0 0 auto;
+         }
+
+         &:hover {
+            color: #444444;
          }
 		}
    }
@@ -938,6 +943,7 @@ body {
 
 		&__filter-button {
          margin-left: 30px;
+         flex: 1 0 40%;
 
          @media (max-width: 750px) {
             margin-left: 0;
@@ -1232,11 +1238,13 @@ body {
          letter-spacing: 0.02em;
          color: $color5;
          position: relative;
+         cursor: pointer;
+         padding: 20px 0;
 
          &:after {
             content: "";
             position: absolute;
-            bottom: -15px;
+            bottom: 0;
             left: 0;
             width: 100%;
             height: 2px;
@@ -1626,6 +1634,7 @@ body {
 
 		&__deleteChecked {
          color: red;
+         cursor: pointer;
          @media (max-width: 364px) {
             font-size: 13px;
          }
@@ -2089,6 +2098,85 @@ body {
 		}
    }
 
+//-------------------AddPhoneOrder----------------
+
+   .add-phone-order {
+      display: flex;
+      justify-content: space-between;
+      align-items: stretch;
+
+		&__title-wrap {
+         @extend %title-wrap;
+		}
+
+		&__title {
+         @extend %title;
+
+         &::after {
+            z-index: 19;
+            height: 5px;
+            bottom: 15px;
+         }
+
+         font-size: 26px;
+		}
+
+      &__text-block{
+         display: flex;
+         flex-direction: column;
+      }
+
+      &__img-block{
+         display: flex;
+         align-items: center;
+         justify-content: center;
+
+         @media (max-width: 640px) {
+            display: none;
+         }
+      }
+
+		&__subtitle {
+         @extend %text;
+		}
+
+		&__btn {
+         @extend %button;
+		}
+
+      input {
+         margin: 20px 0;
+         background: #F7F7F8;
+         border-radius: 10px;
+         border: 1px solid white;
+         @extend %text;
+         padding: 18px;
+         outline: none;
+         position: relative;
+         z-index: 21;
+
+         &:focus {
+            background: #FFFFFF;
+            box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.1);
+            border-radius: 30px;
+         }
+
+         &._error {
+            border: 1px solid red;
+            color: red;
+         }
+
+         &::before {
+            content: "Данные некорректны!";
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            color: red;
+            z-index: 21;
+         }
+      }
+   }
+
 //----------------------------------------------Catalog----------------------------------------------
 
    .catalog {
@@ -2530,9 +2618,15 @@ body {
          color: $color5;
          letter-spacing: 0.02em;
          margin-right: 30px;
+         cursor: pointer;
+         padding: 20px 0;
 
          @media (max-width: 530px) {
             margin-right: 0;
+         }
+
+         &:hover {
+            color: #3230b3;
          }
 		}
    }
@@ -2578,9 +2672,14 @@ body {
          color: $color5;
          letter-spacing: 0.02em;
          margin-right: 30px;
+         padding: 20px 0;
 
          @media (max-width: 530px) {
             margin-right: 0;
+         }
+
+         &:hover {
+            color: #3230b3;
          }
 		}
    }
@@ -2685,6 +2784,541 @@ body {
          color: $color6;
       }
    }
+
+//----------------------------------------------Deliver----------------------------------------------
+
+   .deliver {
+
+      &__wrap {
+         margin-bottom: 40px
+      }
+
+      &__title-wrap {
+         @extend %title-wrap;
+         justify-content: center
+      }
+
+      &__main-title {
+         @extend %title;
+         margin-bottom: 50px;
+      }
+
+      &__condition {
+         display: flex;
+         align-items: stretch;
+         justify-content: space-between;
+         flex-wrap: wrap;
+      }
+
+      &__change {
+         cursor: pointer;
+         padding: 20px 0;
+      }
+   }
+   .deliver-conditions {
+
+      &__item {
+         display: flex;
+         align-items: stretch;
+         flex: 1 0 33.333%;
+         margin-bottom: 30px;
+
+         @media (max-width: 870px) {
+            flex: 1 0 100%;
+         }
+      }
+
+      &__number {
+         @extend %text;
+         font-size: 18px;
+         color: #4945FF;
+         font-weight: bold;
+      }
+
+      &__content {
+         display: flex;
+         img {
+            width: 40px;
+            height: 40px;
+            margin: 0 10px;
+         }
+         margin-top: 40px;
+      }
+
+      &__info {
+         margin-top: 10px;
+      }
+
+      &__title {
+         @extend %text;
+         font-size: 16px;
+         font-weight: bold;
+      }
+
+      &__text {
+         @extend %text;
+         font-size: 14px;
+         color: #676767;
+         position: relative;
+         padding-left: 15px;
+         margin: 15px 0;
+         flex: 1 0 50%;
+         width: 52%;
+         line-height: 22px;
+
+         @media (max-width: 1160px) {
+            width: 80%;
+         }
+         @media (max-width: 870px) {
+            width: 90%;
+         }
+
+         span {
+            color: $color1;
+         }
+
+         &::before {
+            content: "";
+            width: 6px;
+            height: 6px;
+            background: $color5;
+            position: absolute;
+            left: 0;
+            top: 10px;
+            transform: translate(0px, -50%);
+            border-radius: 100px;
+         }
+      }
+   }
+
+//----------------------------------------------Map----------------------------------------------
+
+   .map {
+      position: relative;
+      width: 100%;
+
+		&__form {
+         background: #FFFFFF;
+         box-shadow: 0px 4px 20px rgba(73, 69, 255, 0.2);
+         border-radius: 10px;
+         padding: 20px;
+         position: absolute;
+         top: 50%;
+         left: 10%;
+         transform: translate(0px, -50%);
+         display: flex;
+         align-items: center;
+         flex-direction: column;
+         flex: 1 0 auto;
+
+         @media (max-width: 430px) {
+            left: 50%;
+            transform: translate(-50%, -20%);
+         }
+		}
+   }
+   .map-form {
+
+      &__title-wrap {
+         @extend %title-wrap;
+		}
+
+		&__title {
+         @extend %title;
+         font-size: 24px;
+
+         &:after {
+            height: 4px;
+            bottom: 18px;
+         }
+
+         @media (max-width: 430px) {
+            font-size: 20px;
+         }
+		}
+
+		&__subtitle {
+         @extend %text;
+		}
+
+		&__name {
+         @extend .voice-popup-fields__name;
+         margin: 10px 0;
+		}
+
+		&__phone {
+         @extend .voice-popup-fields__name;
+         margin: 10px 0;
+		}
+
+		&__button {
+         @extend %button;
+		}
+   }
+
+//----------------------------------------------Wholesale----------------------------------------------
+
+   .wholesale {
+      margin-top: 170px;
+      
+		&__wrap {
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+         flex-wrap: wrap;
+
+         @media (max-width: 700px) {
+            flex-direction: column;
+         }
+		}
+
+		&__text-block {
+         display: flex;
+         flex-direction: column;
+         flex: 1 0 30%;
+
+         @media (max-width: 1300px) {
+            flex: 1 0 40%;
+         }
+         @media (max-width: 700px) {
+            text-align: center;
+            margin-bottom: 40px;
+         }
+		}
+
+		&__title-wrap {
+         @extend %title-wrap;
+		}
+
+		&__title {
+         @extend %title;
+         
+		}
+
+		&__subtitle {
+         @extend %text;
+         font-family: "MontReg";
+         font-size: 20px;
+         flex: 1 0 auto;
+         margin: 30px 0;
+		}
+
+		&__button {
+         @extend %button;
+		}
+
+		&__img-center {
+         flex: 1 0 20%;
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         img {
+            width: 200px;
+            height: 200px;
+            object-fit: cover;
+         }
+
+         @media (max-width: 1300px) {
+            flex: 1 0 50%;
+         }
+		}
+
+		&__img-rigth {
+         flex: 1 0 35%;
+         img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+         }
+
+         @media (max-width: 1300px) {
+            display: none;
+         }
+		}
+   }
+
+//----------------------------------------------InLaw----------------------------------------------
+
+   .inlaw {
+
+		&__wrap {
+         margin-top: 40px;
+		}
+
+		&__title-wrap {
+         @extend %title-wrap;
+         justify-content: center;
+		}
+
+		&__title {
+         @extend %title;
+		}
+
+		&__subtitle {
+         @extend %text;
+         font-size: 20px;
+         font-family: "MontReg";
+         text-align: center;
+         line-height: 30px;
+         margin: 25px 0;
+		}
+
+		&__content {
+         display: flex;
+         align-items: stretch;
+         justify-content: space-between;
+         flex-wrap: wrap;
+		}
+
+		&__item {
+         flex: 1 0 20%;
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+         align-items: center;
+         text-align: center;
+
+         @media (max-width: 930px) {
+            flex: 1 0 100%;
+            margin: 20px 0;
+         }
+		}
+   }
+   .inlaw-item {
+
+		&__img {
+         margin-bottom: 15px;
+		}
+
+		&__title {
+         @extend %text;
+         font-size: 16px;
+         line-height: 20px;
+         font-family: "MontBold";
+         margin: 15px 0;
+		}
+
+		&__subtitle {
+         @extend %text;
+         flex: 1 0 auto;
+         font-size: 14px;
+         color: #676767;
+         line-height: 22px;
+         max-width: 50%;
+
+         @media (max-width: 500px) {
+            max-width: 100%;
+         }
+		}
+   }
+
+//----------------------------------------------Contacts----------------------------------------------
+
+   .contacts {
+
+		&__wrap {
+         margin-top: 170px;
+		}
+
+		&__title-wrap {
+         @extend %title-wrap;
+		}
+
+		&__title {
+         @extend %title;
+         margin: 0 auto;
+		}
+
+		&__items {
+         display: flex;
+         align-items: stretch;
+         justify-content: space-between;
+         flex-wrap: wrap;
+         margin: 30px 0;
+		}
+
+		&__item {
+         display: flex;
+         flex: 1 0 30%;
+         margin: 0 20px;
+
+         @media (max-width: 1250px) {
+            flex: 1 0 45%;
+         }
+         @media (max-width: 840px) {
+            flex: 1 0 100%;
+            justify-content: center;
+            margin: 0;
+         }
+		}
+   }
+   .contacts-item {
+
+		&__number {
+         @extend %text;
+         font-size: 18px;
+         color: #4945FF;
+		}
+
+		&__text-block {
+         margin-top: 40px;
+         margin-left: 20px;
+		}
+
+		&__subitem {
+         display: flex;
+         align-items: stretch;
+         margin-bottom: 15px;
+		}
+   }
+   .contacts-subitem {
+
+		&__img {
+         margin-right: 10px;
+         flex: 0 0 auto;
+		}
+
+		&__text {
+		}
+
+		&__title {
+         @extend %text;
+         font-weight: 600;
+         margin-bottom: 7px;
+		}
+
+		&__subtitle {
+         @extend %text;
+         font-size: 14px;
+         line-height: 17px;
+         color: #676767;
+		}
+   }
+
+//----------------------------------------------Defend----------------------------------------------
+
+   .defend {
+
+		&__wrap {
+         margin-top: 170px;
+         display: flex;
+         align-items: stretch;
+         justify-content: space-between;
+		}
+
+		&__text-block {
+         display: flex;
+         flex-direction: column;
+         flex: 1 0 50%
+		}
+
+		&__title-wrap {
+         @extend %title-wrap;
+
+         @media (max-width: 990px) {
+            justify-content: center;
+            text-align: center;
+         }
+		}
+
+		&__title {
+         @extend %title;
+		}
+
+		&__subtitle {
+         @extend %text;
+         font-size: 20px;
+         line-height: 30px;
+         color: #343434;
+         margin-top: 10px;
+         margin-bottom: 20px;
+
+         @media (max-width: 990px) {
+            text-align: center;
+         }
+		}
+
+		&__statistic {
+         display: flex;
+         align-items: stretch;
+         justify-content: space-between;
+         flex: 1 0 auto;
+         margin-bottom: 20px;
+
+         @media (max-width: 1160px) {
+            flex-direction: column;
+         }
+		}
+
+      a {
+         @media (max-width: 990px) {
+            text-align: center 
+         }
+      }
+		&__btn {
+         @extend %button;
+         width: 200px;
+
+         @media (max-width: 990px) {
+            text-align: center;
+         }
+		}
+
+		&__img-block {
+         max-width: 100%;
+         margin-left: 20px;
+         flex: 1 0 40%;
+
+         img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+         }
+
+         @media (max-width: 990px) {
+            display: none;
+         }
+		}
+   }
+   .defend-statistic {
+
+		&__item {
+         display: flex;
+         flex: 1 0 30%;
+
+         @media (max-width: 990px) {
+            justify-content: center;
+         }
+		}
+
+		&__img {
+         margin-right: 15px;
+         flex: 0 0 10%;
+
+         img {
+            transform: translate(0px, 40%);
+         }
+		}
+
+		&__text {
+         min-width: 200px;
+		}
+
+		&__title {
+         @extend %text;
+         font-size: 30px;
+         line-height: 37px;
+         color: #2B2A2A;
+		}
+
+		&__subtitle {
+         @extend %text;
+         font-size: 16px;
+         line-height: 22px;
+         color: #676767;
+		}
+   }
+
 
 //----------------------------------------------Footer----------------------------------------------
 
