last-last deploy

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1267,6 +1267,7 @@ body {
             height: 25px;
             font-size: 25px;
             color: #6767674d;
+            cursor: pointer;
          }
 
          &._active {
